--- a/style.css
+++ b/style.css
@@ -1076,7 +1076,7 @@ pre code {
   position: relative;
   background-repeat: no-repeat;
   background-position: 50% 0;
-  background-size: fixed;
+  background-size: cover;
   background-image: url(https://2017.stockholm.wordcamp.org/files/2017/06/tatiana-lapina-9276-e1497210063858.jpg);
   transition: all .15s ease;
 }
