--- a/style.css
+++ b/style.css
@@ -585,9 +585,10 @@ body {
 h1,h2,h3,h4 {
 	margin-bottom: 1.5rem;
 	margin-top: 0;
-	font-weight: 700;
 	line-height: 1;
 	text-transform: uppercase;
+	font-family: Fira Sans, sans-serif;
+	font-weight: 300;
 }
 
 h1 {
