--- a/style.css
+++ b/style.css
@@ -1217,19 +1217,7 @@ pre code {
 	left: 0;
 	width: 100%;
 	height: 100%;
-  background: -webkit-linear-gradient(to bottom, rgba(189,195,199,0.5), rgba(44,62,80,0.5)); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, rgba(189,195,199,0.5), rgba(44,62,80,0.5)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
-
-.site-header:before {
-	position: absolute;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	background-color: rgba(45,40,45,.2);
-	content: "";
-	z-index: 999;
+	background-color: rgba(45,40,45,0.6);
 }
 
 .site-header>* {
