--- a/style.css
+++ b/style.css
@@ -586,7 +586,8 @@ body {
 }
 
 h1,h2,h3,h4 {
-	margin-bottom: 1.5rem;
+	margin-bottom: 1rem;
+	margin-top: 3rem;
 	line-height: 1;
 	text-transform: uppercase;
 	font-family: Fira Sans, sans-serif;
@@ -1166,7 +1167,7 @@ pre code {
 	font-size: 1.7em;
 	line-height: 1.25em;
 	font-family: 'Fira Sans', sans-serif;
-	font-weight: 300;
+	font-weight: 400;
 	letter-spacing: -0.5px;
 	text-transform: none;
 	color: #fff;
